--- a/react/index.html
+++ b/react/index.html
@@ -9,7 +9,7 @@
     <title>text suggestion</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="App"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
